# il-elections

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: python-lint-and-tests.yml
config/: preprocessing_config.yaml
data/elections/knesset-19/: AllStations-19.cached-csv  AllStations-19.pdf.xlsx  results_19.xls
data/elections/knesset-20/: TellThePolls.9.3-20.xls  expbkal20.csv
data/elections/knesset-21/: kalpies_full_report-21.xls
data/elections/knesset-22/: kalpies_report_tofes_b_6th_edition_15_9-22.xlsx
data/elections/knesset-23/: kalpies_report_19_1_20_1-23.xlsx
data/elections/knesset-24/: kalpies_report_tofes_b_18.3.21-24.xlsx
data/elections/knesset-25/: kalpiplaces_kalpieslist_27-10.xlsx
data/gis/boundaries/: Israel_water_bodies.kml
data/tests/: ballots_metadata_test_file.pdf.xlsx  ballots_metadata_test_file.xlsx  ballots_votes_test_file1.csv  ballots_votes_test_file2.csv
docs/: environment_setup.md  geocoding_and_locally_memoize.md  parsing_raw_files.md  preprocessing_pipeline.md
il_elections/data/: data.py  geodata_fetcher.py  known_addresses_geolocations.csv  parsers.py  parsers_test.py
il_elections/pipelines/preprocessing/: preprocessing.py  preprocessing_main.py
il_elections/utils/: data_utils.py  data_utils_test.py  debug_utils.py  locally_memoize.py  plot_utils.py
il_elections/utils/html_templates/: per_location_tooltip.html.jinja2
notebooks/: Geodata_Debugging.ipynb
outputs/preprocessing/: knesset-18.data  knesset-18.metadata  knesset-19.data  knesset-19.metadata  knesset-20.data  knesset-20.metadata  knesset-21.data  knesset-21.metadata  knesset-22.data  knesset-22.metadata  knesset-23.data  knesset-23.metadata  knesset-24.data  knesset-24.metadata  knesset-25.data  knesset-25.metadata
