[tool.poetry]
name = "il-elections"
version = "0.1.0"
description = "Analyzing Israel elections data."
authors = ["Zach Moshe <zachmoshe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"
pandas = "^1.3.2"
xlrd = "^2.0.1"
openpyxl = "^3.0.7"
parametrized = "^0.1"
absl-py = "^0.13.0"
googlemaps = "^4.5.3"
importlib_resources = "^5.2.2"
pyarrow = "^5.0.0"
tabulate = "^0.8.9"
geopandas = "^0.10.0"
Shapely = "^1.7.1"
branca = "^0.4.2"
folium = "^0.12.1"
pygeos = "^0.10.2"
Jinja2 = "^3.0.2"
geovoronoi = "^0.3.0"
python-dotenv = "^1.0.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
parameterized = "^0.9.0"
autopep8 = "^1.5.7"
ipykernel = "^6.2.0"
nbconvert = "^6.1.0"
jupyter_contrib_nbextensions = "^0.5.1"
# Colab requirements
jupyter_http_over_ws = "^0.0.8"  # also requires running `jupyter serverextension enable --py jupyter_http_over_ws`
matplotlib = "^3.4.3"
pytest = "^6.2.5"
pylint = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
preprocessing_pipeline = 'il_elections.pipelines.preprocessing.preprocessing_main:cli'
